jetzt mit 3 Plots...

--- a/Stories/Bandbreite-von-Signalen/summe_mehrerer_sinussignale.ipynb
+++ b/Stories/Bandbreite-von-Signalen/summe_mehrerer_sinussignale.ipynb
@@ -149,13 +149,18 @@
     "    return [i for i in range(2,n,2)]\n",
     "\n",
     "\"\"\"\n",
-    "Hier werden 10 einzelne Bilder erzeugt, wobei jedes Bild aus 2 Plots besteht.\n",
+    "Hier werden 10 einzelne Bilder erzeugt, wobei jedes Bild aus 3 Plots besteht.\n",
     "Vonm Bild zu Bild erhöht sich die Anzahl der beteiligten Harmonischen.\n",
-    "Das rechte Bild zeigt Harmonische in einem Graph, das rechte Bild zeigt die Summe der Harmonischen\n",
+    "Das linke Bild zeigt Harmonische in einem Graph, das mittlere Bild zeigt die Summe der Harmonischen, das rechte Bild zeigt das Spektrum des \"Rechtecksignals\".\n",
+    "\n",
+    "Lernziel:\n",
     "Wält man ungerade Harmonische und addiert diese, nähert sich die Summe der Harmonischen immer mehr einem Rechtecksignal an.\n",
     "Ein ideales Rechtecksignal besteht also aus der Summe unendlich vieler ungerader harmonischer Sinussignale.\n",
     "Man kann auch sagen, je steiler die Flanken eines Rechtecksignals, je mehr Sinussignale stecken darinnen, je Breiter ist also\n",
     "das Spektrum der enthaltenen Sinussignale.\n",
+    "\n",
+    "Idee für eigenen Experimente:\n",
+    "Ändern Sie den Code doch einmal so, dass nur gerade Harmonische addiert werden. Welche Signalform ergibt sich dann als Summe?\n",
     "\n",
     "\"\"\"\n",
     "for i in range(1,10):\n",
